# SharedResouceLibrary

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
static/DynRes/: StaticResTemplate.cpp  dynres.cpp  rc.parser.py
tests/DynRes/: CMakeLists.txt
tests/DynRes/src/: main.cpp
tests/DynResDLL/: CMakeLists.txt
tests/DynResDLL/src/: main.cpp  myres.rc
